# dignity

./: README.md  pyproject.toml
resources/: focus-rules.example.json
specs/active/focus-state-dispatch/: dependencies.md  spec.md  tasks.md
specs/active/hook-dispatch-migration/: context.md  dependencies.md  spec.md  tasks.md  validation-checklist.md
specs/active/spec-management-api/: context.md  spec.md  tasks.md  validation-checklist.md
specs/active/spec-template-suite/: context.md  dependencies.md  spec.md  tasks.md  validation-checklist.md
specs/archive/: README.md
specs/archive/focus-state-dispatch/: context.md  spec.md  tasks.md  validation-checklist.md
specs/archive/hook-dispatch-migration/: context.md  spec.md
specs/archive/spec-management-api/: context.md  dependencies.md  spec.md
specs/archive/spec-template-suite/: context.md  spec.md  tasks.md
src/dignity/: __init__.py  cli.py  settings.py  state.py  statusline.py  tokens.py
src/dignity/hooks/dispatch/: __init__.py  actions.py  config.py  (+4 more)
src/dignity/spec/: __init__.py  create.py  index.py  lifecycle.py  query.py  resolve.py  sections.py  tasks.py  types.py  validation.py
tests/: test_cli.py  test_settings.py  test_state.py  test_statusline.py  test_tokens.py
tests/hooks/dispatch/: test_focus_integration.py  test_matchers.py  test_stop_hook_tdd.py  test_stop_hook_tdd_evidence.py  test_types.py
tests/spec/: __init__.py  test_create.py  test_index.py  test_lifecycle.py  test_query.py  test_resolve.py  test_sections.py  test_tasks.py  test_templates.py  test_types.py  test_validation.py
(+7 files in other folders)
